[tool.poetry]
name = "frameshifter"
version = "0.1.0"
description = ""
authors = ["config <wangyihanger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"
configargparse = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
